--- a/Adult Cardiac Surgery Times Series Analysis.Rmd
+++ b/Adult Cardiac Surgery Times Series Analysis.Rmd
@@ -112,6 +112,51 @@ ggplot(aes(x = Month)) +
         legend.text=element_text(size=12),legend.title=element_blank(),plot.title = element_text(size=14), legend.position= c(0.85, 0.8))  
 
 
+cardiacsurgery_tsb %>%
+summarise(TotalAdmit = sum(Admissions)) %>%  
+ggplot(aes(x = Month, y =TotalAdmit)) + 
+  geom_smooth(method=lm, se=FALSE, col="#9d928a", linetype="dashed", size=1)+
+  geom_line(color = "#2c2825", size=1) +
+  labs( title = "Total admissions",y = "Number per month", x="")+
+  theme_bw()+
+  theme(panel.grid.major.y = element_line(color = "grey80"), panel.grid.major.x =  element_blank(), panel.grid.minor.x =  element_blank(), panel.border = element_blank(), axis.line = element_line(colour = "black", size=1),
+        axis.text.x = element_text(size = 12), axis.text.y = element_text(size = 12), 
+        axis.title.x = element_text(size = 14), axis.title.y = element_text(size = 14,vjust=2), 
+        legend.text=element_text(size=12),legend.title=element_blank(),plot.title = element_text(size=14), legend.position= c(0.85, 0.8))+          
+ scale_y_continuous(expand = c(0, 0), limits=c(0,1200, 200))
+
+
+#Testing differences between patients, admissions, spells and episodes
+cardiacsurgery_tsb %>%
+summarise(TotalAdmit = sum(Admissions),
+          TotalPatients= sum(Patients),
+          TotalEpisodes=sum(Episodes))%>%  
+ggplot(aes(x = Month)) + 
+  geom_line(aes(y =TotalPatients), color = "red", size=1) +
+  geom_line(aes(y =TotalEpisodes), color = "blue", size=1) +
+    geom_line(aes(y =TotalAdmit), color ="black", size=1) +
+  labs( title = "Total admissions, patients and episodes",y = "Number per month", x="")+
+  theme_bw()+
+  theme(panel.grid.major.y = element_line(color = "grey80"), panel.grid.major.x =  element_blank(), panel.grid.minor.x =  element_blank(), panel.border = element_blank(), axis.line = element_line(colour = "black", size=1),
+        axis.text.x = element_text(size = 12), axis.text.y = element_text(size = 12), 
+        axis.title.x = element_text(size = 14), axis.title.y = element_text(size = 14,vjust=2), 
+        legend.text=element_text(size=12),legend.title=element_blank(),plot.title = element_text(size=14), legend.position= c(0.85, 0.8))  
+
+cardiacsurgery_tsb %>%
+summarise(TotalAdmit = sum(Admissions),
+          TotalSpells=sum(Spells)) %>%  
+ggplot(aes(x = Month)) + 
+  geom_line(aes(y =TotalSpells), color = "green", size=1) +
+    geom_line(aes(y =TotalAdmit), color ="black", size=1) +
+  labs( title = "Total admissions, patients and episodes",y = "Number per month", x="")+
+  theme_bw()+
+  theme(panel.grid.major.y = element_line(color = "grey80"), panel.grid.major.x =  element_blank(), panel.grid.minor.x =  element_blank(), panel.border = element_blank(), axis.line = element_line(colour = "black", size=1),
+        axis.text.x = element_text(size = 12), axis.text.y = element_text(size = 12), 
+        axis.title.x = element_text(size = 14), axis.title.y = element_text(size = 14,vjust=2), 
+        legend.text=element_text(size=12),legend.title=element_blank(),plot.title = element_text(size=14), legend.position= c(0.85, 0.8))  
+
+
+
 ```
 
 ## Elective vs non-elective admissions
