--- a/UPDATED Adult Cardiac Surgery Times Series Analysis Feb 2023.Rmd
+++ b/UPDATED Adult Cardiac Surgery Times Series Analysis Feb 2023.Rmd
@@ -95,7 +95,7 @@ cardiacsurgery_tsb %>%
 summarise(TotalAdmit = sum(Admissions_1)) %>%  
 ggplot(aes(x = Month, y =TotalAdmit)) + 
     geom_smooth(se=FALSE, col="#9d928a", linetype="dashed", linewidth=1)+
-  geom_line(color = "#2c2825", size=1) +
+  geom_line(color = "#2c2825", linewidth=1) +
   labs( title = "Total admissions",y = "Number per month", x="")+
   theme_bw()+
   theme(panel.grid.major.y = element_line(color = "grey80"), panel.grid.major.x =  element_blank(), panel.grid.minor.x =  element_blank(), panel.border = element_blank(), axis.line = element_line(colour = "black", size=1),
@@ -150,6 +150,26 @@ ggplot(aes(x =  adm_year, y =ratio)) +
         axis.title.x = element_text(size = 14), axis.title.y = element_text(size = 14,vjust=2), 
         legend.text=element_text(size=12),legend.title=element_blank(),plot.title = element_text(size=14), legend.position= c(0.15, 0.8)) +
   scale_y_continuous(expand = c(0, 0), limits=c(0,2.2))
+
+
+cardiacsurgery%>%
+  filter(Admit_Method== "Elective") %>%
+  group_by(adm_year)%>%
+summarise(Total = sum(Admissions_1)/n_distinct(adm_month)) %>%
+ggplot(aes(x =  adm_year, y =Total)) + 
+  geom_line(color="blue", size=1)  + 
+  geom_point(color="blue", size=2)+
+  labs( title = "Average monthly admissions by year",y = "Monthly number", x="")+
+  theme_bw()+
+  theme(panel.grid.major.y = element_line(color = "grey80"), panel.grid.major.x =  element_blank(), panel.grid.minor.x =  element_blank(), panel.border = element_blank(), axis.line = element_line(colour = "black", size=1),
+        axis.text.x = element_text(size = 12), axis.text.y = element_text(size = 12), 
+        axis.title.x = element_text(size = 14), axis.title.y = element_text(size = 14,vjust=2), 
+        legend.text=element_text(size=12),legend.title=element_blank(),plot.title = element_text(size=14), legend.position= c(0.15, 0.8)) +
+  scale_y_continuous(expand = c(0, 0), limits=c(0,300))
+
+
+
+
 
 ```
 
